aws-ec2-config.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: S3 bucket, VPC with Public/Private subnets, Internet Gateway, Security Group, and EC2 Instance

Parameters:
  TrustedIP:
    Description: 'Trusted IP for SSH access'
    Type: String
    Default: '0.0.0.0/0'

  KeyName:
    Description: 'Name of an existing EC2 KeyPair'
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be the name of an existing EC2 KeyPair

  LatestAmiId:
    Description: 'Latest Amazon Linux 2 AMI ID'
    Type: AWS::EC2::Image::Id
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

Resources:
  # -------------------
  # S3 Bucket
  # -------------------
  MyS3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: my-cfn-s3-bucket-devsecops2
      VersioningConfiguration:
        Status: Enabled

  # -------------------
  # VPC and Networking
  # -------------------
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyInternetGateway

  AttachIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway

  # -------------------
  # Public Subnet
  # -------------------
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: PublicSubnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachIGW
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  # -------------------
  # Private Subnet
  # -------------------
  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: PrivateSubnet

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: PrivateRouteTable

  # TODO: delete security groups - already in templates
  # -------------------
  # Security Groups
  # -------------------
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: MySecurityGroup
      GroupDescription: Security group for EC2 instance with SSH and HTTP access
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        # SSH Access
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref TrustedIP
          Description: SSH from trusted IP
        # HTTP Access
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: HTTP from anywhere
        # HTTPS Access
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
          Description: HTTPS from anywhere
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic
      Tags:
        - Key: Name
          Value: MySecurityGroup

  
  AWSTemplateFormatVersion: 2010-09-09
    Description: Example template to create a Hub resource
    Resources:
      ExampleHubWithTags:
        Type: 'AWS::SecurityHub::Hub'
        Properties:
          Tags:
            key1: value1
            key2: value2
          EnableDefaultStandards: true
          ControlFindingGenerator: 'SECURITY_CONTROL'
      
       

  # -------------------
  # EC2 Instance in Public Subnet
  # -------------------
  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      KeyName: !Ref KeyName
      ImageId: !Ref LatestAmiId
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds:
        - !Ref MySecurityGroup
      IamInstanceProfile: !Ref EC2InstanceProfile
      Tags:
        - Key: Name
          Value: MyEC2Instance
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "<h1>Welcome to your DevSecOps EC2 Instance via CloudFormation</h1>" > /var/www/html/index.html

  # TODO: create parameters for IAM roles
  # -------------------
  # IAM Role for EC2 Instance
  # -------------------
  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.comReusable VPC with Public and Private Subnets, Internet Gateway, and Route Tables
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
      Tags:
        - Key: Name
          Value: EC2InstanceRole

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2InstanceRole

Outputs:
  S3BucketName:
    Description: Name of S3 bucket
    Value: !Ref MyS3Bucket
    Export:
      Name: !Sub '${AWS::StackName}-S3Bucket'

  VpcId:
    Description: ID of VPC
    Value: !Ref MyVPC
    Export:
      Name: !Sub '${AWS::StackName}-VpcId'

  PublicSubnetId:
    Description: ID of public subnet
    Value: !Ref PublicSubnet
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnet'

  PrivateSubnetId:
    Description: ID of private subnet
    Value: !Ref PrivateSubnet
    Export:
      Name: !Sub '${AWS::StackName}-PrivateSubnet'

  SecurityGroupId:
    Description: ID of security group
    Value: !Ref MySecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-SecurityGroup'

  EC2InstanceId:
    Description: ID of EC2 Instance
    Value: !Ref MyEC2Instance
    Export:
      Name: !Sub '${AWS::StackName}-EC2Instance'

  EC2InstancePublicIP:
    Description: Public IP of EC2 Instance
    Value: !GetAtt MyEC2Instance.PublicIp
    Export:
      Name: !Sub '${AWS::StackName}-EC2PublicIP'

  EC2InstanceDNS:
    Description: Public DNS of EC2 Instance
    Value: !GetAtt MyEC2Instance.PublicDnsName
    Export:
      Name: !Sub '${AWS::StackName}-EC2DNS'
